# httpdns-sdk-android

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.gradle  consumer-proguard-rules.pro  proguard-rules.pro  upload.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: Jni.cpp  Jni.h  JniHelper.cpp  JniHelper.h  TlsHelper.h
src/main/cpp/adapter/: HttpDnsBridge.cpp  HttpDnsBridge.h
src/main/cpp/aes/: aes.h
src/main/cpp/des/: des.cpp  des.h
src/main/cpp/log/: Log.h
src/main/cpp/stack/: NetworkStack.cpp  NetworkStack.h
src/main/java/com/tencent/msdk/dns/: BackupResolver.java  DnsConfig.java  DnsService.java  HttpDnsCache.java  HttpDnsResponseObserver.java  ILookedUpListener.java  MSDKDnsResolver.java
src/main/java/com/tencent/msdk/dns/base/bugly/: SharedBugly.java
src/main/java/com/tencent/msdk/dns/base/compat/: CollectionCompat.java
src/main/java/com/tencent/msdk/dns/core/: ConfigFromServer.java  Const.java  CountDownManager.java  DnsDescription.java  DnsManager.java  ICache.java  IDns.java  ILookupListener.java  IRetry.java  ISorter.java  IStatisticsMerge.java  IpSet.java  LookupContext.java  LookupHelper.java  LookupParameters.java  LookupResult.java
src/main/java/com/tencent/msdk/dns/report/: AttaHelper.java  BatchStatistics.java  CacheStatisticsReport.java  ReportConst.java  ReportHelper.java  Session.java  SpendReportResolver.java
src/main/res/xml/: network_security_config.xml
src/test/java/android/text/: TextUtils.java
src/test/java/com/tencent/msdk/dns/: DnsConfigTest.java
(+75 files in other folders)
